--- a/present.html
+++ b/present.html
@@ -253,7 +253,7 @@
 
         // 페이지 전환 함수
         function goToNextPage() {
-            window.location.href = "proto tarot1.html"; // 여기에 넘어가고 싶은 페이지 URL을 적어주세요.
+            window.location.href = "index.html"; // 여기에 넘어가고 싶은 페이지 URL을 적어주세요.
         }
     </script>
 </body>
