--- a/present.html
+++ b/present.html
@@ -197,9 +197,11 @@
         const frontImages = [
             { url: 'p1.png' },
             { url: 'p2.png' },
-            { url: 'p3.jpg' },
-            { url: 'p4.jpg' },
-            { url: 'p5.jpg' },
+            { url: 'p3.png' },
+            { url: 'p4.png' },
+            { url: 'p5.png' },
+            { url: 'p6.png' },
+            { url: 'p7.png' }
         ];
 
         // 랜덤 이미지 설정
